<?xml version="1.0" encoding="utf-8"?><ScrollView    android:layout_width="match_parent"    android:layout_height="match_parent"    android:fillViewport="true"    xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@color/teal_200"    android:orientation="vertical"    tools:context=".MainActivity">    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="center"        android:layout_marginTop="50dp"        android:text="@string/titulo_principal"        android:textColor="@color/white"        android:textSize="30sp"        android:textStyle="bold"        tools:ignore="TextContrastCheck" />    <EditText        android:id="@+id/editTituloRotina"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="20dp"        android:layout_marginTop="50dp"        android:layout_marginEnd="20dp"        android:background="@color/white"        android:maxLines="1"        android:hint="@string/hint_titulo"        android:padding="15dp"        android:textColorHint="#757575"        tools:ignore="Autofill,TextFields" />    <EditText        android:id="@+id/editrotina"        android:layout_width="match_parent"        android:layout_height="200dp"        android:layout_marginStart="20dp"        android:layout_marginTop="10dp"        android:layout_marginEnd="20dp"        android:background="@color/white"        android:gravity="start"        android:inputType="textMultiLine"        android:hint="@string/hint_rotina"        android:padding="15dp"        android:textColorHint="#757575"        tools:ignore="Autofill,TextFields" />    <EditText        android:id="@+id/editDataRotina"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="20dp"        android:layout_marginTop="10dp"        android:layout_marginEnd="20dp"        android:background="@color/white"        android:maxLength="10"        android:hint="@string/hint_data"        android:importantForAutofill="no"        android:padding="15dp"        android:textColorHint="#757575"        tools:ignore="TextFields" />    <EditText        android:id="@+id/editAutorRotina"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="20dp"        android:layout_marginTop="10dp"        android:layout_marginEnd="20dp"        android:background="@color/white"        android:maxLines="1"        android:hint="@string/hint_autor"        android:importantForAutofill="no"        android:padding="15dp"        android:textColorHint="#757575"        tools:ignore="TextFields" />    <Button        android:id="@+id/PublicarRotina"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="40dp"        android:layout_marginTop="10dp"        android:layout_marginEnd="40dp"        android:backgroundTint="@color/teal_700"        android:padding="15dp"        android:text="@string/txt_button_publicar"        android:textAllCaps="false"        android:textColor="@color/white"        android:textSize="18sp"        tools:ignore="TextContrastCheck" /></LinearLayout></ScrollView>